--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.1.2",
     "react-router-dom": "^6.13.0",
     "react-s3": "^1.3.1",
     "react-scripts": "5.0.1",
